# docker-winpe

./: .cursorrules  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  README_zh.md  docker-compose.yml  justfile
apps/agent-bridge/: Cargo.toml
apps/agent-bridge/src/: main.rs
apps/agent-client/: Cargo.toml
apps/agent-client/src/: exec.rs  main.rs  tui.rs  web.rs
apps/agent-server/: Cargo.toml
apps/agent-server/src/: main.rs
apps/agent-server/src/api/: automation.rs  health.rs  mod.rs  terminal.rs
apps/agent-server/src/automation/: executor.rs  mod.rs
apps/agent-server/src/terminal/: conpty.rs  mod.rs  session.rs  ws.rs
apps/agent-server/ui/: app.js  index.html  style.css
docs/: API_AUTOMATION.md  API_AUTOMATION_zh.md  API_TERMINAL.md  API_TERMINAL_zh.md  ARCHITECTURE.md  ARCHITECTURE_zh.md  CLIENT_CLI.md  CLIENT_CLI_zh.md  README.md  README_zh.md  SERVER_IMPL_NOTES.md  SERVER_IMPL_NOTES_zh.md  SOFTWARE_DESIGN_zh.md  TODO.md  TODO_zh.md  UI_NOTES.md  UI_NOTES_zh.md  WS_PROTOCOL.md  WS_PROTOCOL_zh.md
resources/Microsoft.WindowsADK.WinPEAddon/: Microsoft.WindowsADK.WinPEAddon.installer.yaml  Microsoft.WindowsADK.WinPEAddon.locale.en-US.yaml  Microsoft.WindowsADK.WinPEAddon.yaml
scripts/: build-winpe-iso.ps1  entrypoint.sh  install-winpe-deps.ps1  startup.ps1
