
[workspace]
members = ["packages/agent-core", "apps/agent-client", "apps/agent-server"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = { version = "0.61", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_IO",
] }
